# gtest_croscompile_test

./: CMakeLists.txt  LICENSE  toolchain.aarch64.cmake  toolchain.aarch64.gtest.cmake
src/: CMakeLists.txt
src/hello/: CMakeLists.txt  hello.cpp  hello.h
src/hello_test/: CMakeLists.txt  hello_test.cpp
